--- a/Java/javaindex.html
+++ b/Java/javaindex.html
@@ -9,7 +9,7 @@
  <ul style="list-style-type:square">
   <li id="week01">1주차
    <ol>
-    <li><a href="https://hwamgseomwoo.github.io/Java/week01/z.html" target="_blank">실습1</a></li>
+    <li><a href="https://hwangseomwoo.github.io/Java/week01/z.html" target="_blank">실습1</a></li>
    </ol>
   </li>
  </ul><hr/>
